entrega 3